--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New article</h1>
+<div class="page-header"><h1>New Article</h1></div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Back', articles_path, :class => "btn" %>
