--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Bootstrap</title>
+    <title>SimpleCMS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= stylesheet_link_tag "bootstrap", :media => "all" %>
+	<%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
 	<%= stylesheet_link_tag "font-awesome", :media => "all" %>
     <style>
         body {
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         }
     </style>
-    <%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
+    
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -66,6 +66,7 @@
 <%= javascript_include_tag "jquery" %>
 <%= javascript_include_tag "bootstrap" %>
 <%= javascript_include_tag "bootstrap-fileupload" %>
+<%= javascript_include_tag "bootstrap-datepicker" %>
 <script type="text/javascript">
     $(document).ready(function() {
         $('a[data-confirm]').click(function(ev) {
@@ -89,6 +90,10 @@
             $('#dataConfirmModal').modal({show:true});
             return false;
         });
+		$('#datepicker').datepicker({
+			format: 'mm-dd-yyyy',
+			todayBtn: 'linked'
+		});
     });
 </script>
 </body>
