--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,14 @@
 </div>
 
 <div class="container">
+	<ul class="hmenu">
+	    <%= render 'shared/navigation' %>
+	  </ul>
+	  <% flash.each do |name, msg| %>
+	    <% if msg.is_a?(String) %>
+	      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+	    <% end %>
+	  <% end %>
     <%= yield %>
 </div>
 <!-- /container -->
