--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
 <h1>Show User</h1>
-<p>User: <%= @user.name %></p>
+<p>User: <%= current_user.email %></p>
+ <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
