--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,6 +15,9 @@
   <%= @article.published_on %>
 </p>
 
+<p>
+	<%= link_to "Download", :controller => "articles", :action => "download", :id => @article %>
+</p>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
